# ETHOS

./: .gitignore  .gitmodules  LICENSE  README.md
ethos-automation/ethos-aerial-yaml/ethos_conf/: ethos-gnb-vnf.sa.band78.273prb.aerial.conf  ethos-gnb-vnf.sa.cbrs.aerial.conf
ethos-automation/ethos-aerial-yaml/ethos_sa_gnb_aerial/: aerial_l1_entrypoint.sh  cuphycontroller_P5G_FXN_default.yaml  docker-compose.yaml  gnb_apply_patch_build.sh  run_controller.sh
ethos-measure/: pmd_test  power_measure_on.sh
ethos-measure/ETHOS-power/: CMakeLists.txt  main.cpp
ethos-measure/ETHOS-power/src/: TrackerScheduler.cpp  TrackerScheduler.h
ethos-measure/compose-scripts/: docker-compose.yaml  ethos-power-measure.sh
ethos-measure/docker/: Dockerfile.ethos.powermeasure
ethos-measure/docker/pmd_lib/cmake/CppLinuxSerial/: CppLinuxSerialConfig.cmake  CppLinuxSerialTargets-noconfig.cmake  CppLinuxSerialTargets.cmake
ethos-oai-dev-docker/: docker-build-ethos-image.sh
ethos-oai-dev-docker/docker/: Dockerfile.gNB.aerial.ubuntu20.ethos.GIGABYTE  Dockerfile.gNB.aerial.ubuntu22.ethos.GH
ethos-oai-dev-docker/oai-ethos-dev-patches-Gigabyte/openair2/LAYER2/NR_MAC_gNB/: ethos_RIC_shm.c  ethos_RIC_shm.h  gNB_scheduler.c  gNB_scheduler_dlsch.c  gNB_scheduler_ulsch.c  nr_mac_gNB.h
ethos-oai-dev-docker/oai-ethos-dev-patches-Gigabyte/openair2/NR_PHY_INTERFACE/: NR_IF_Module.c
